[package]
name = "limnus-scheduler"
version = "0.0.17"
edition = "2021"
license = "MIT"
description = "Limnus Scheduler trait"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game"]

[dependencies]
limnus-system-state = { path = "../system-state", version = "0.0.17" }
limnus-stage = { path = "../stage", version = "0.0.17" }
