[package]
name = "limnus-scheduler"
version = "0.0.18"
edition = "2024"
license = "MIT"
description = "Limnus Scheduler trait"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game"]

[dependencies]
limnus-system-state = { path = "../system-state", version = "0.0.18" }
limnus-stage = { path = "../stage", version = "0.0.18" }
