[package]
name = "limnus-screen"
version = "0.0.17"
edition = "2021"
repository = "https://github.com/swamp/limnus"
license = "MIT"
categories = ["game-development"]
description = "platform neutral screen and window types"


[dependencies]
limnus-resource = { path = "../resource", version = "0.0.17" }
limnus-message = { path = "../message", version = "0.0.17" }
int_math = "0.0.2"
