[package]
name = "limnus-screen"
version = "0.0.18"
edition = "2024"
repository = "https://github.com/swamp/limnus"
license = "MIT"
categories = ["game-development"]
description = "platform neutral screen and window types"


[dependencies]
limnus-resource = { path = "../resource", version = "0.0.18" }
limnus-message = { path = "../message", version = "0.0.18" }
int_math = "0.0.2"
