[package]
name = "limnus-stage"
version = "0.0.17"
edition = "2021"
license = "MIT"
description = "Limnus stage that holds a vector of systems"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game"]

[dependencies]
limnus-system = { path = "../system", version = "0.0.17" }
limnus-system-state = { path = "../system-state", version = "0.0.17" }
