[package]
name = "limnus-stage"
version = "0.0.18"
edition = "2024"
license = "MIT"
description = "Limnus stage that holds a vector of systems"
repository = "https://github.com/swamp/limnus"
categories = ["game-development"]
keywords = ["game"]

[dependencies]
limnus-system = { path = "../system", version = "0.0.18" }
limnus-system-state = { path = "../system-state", version = "0.0.18" }
