[package]
name = "limnus-system-params"
version = "0.0.15"
edition = "2021"
repository = "https://github.com/swamp/limnus"
license = "MIT"
categories = ["game-development"]
description = "Limnus system parameters"

[dependencies]
limnus-system-state = { path = "../system-state", version = "0.0.15" }
limnus-message = { path = "../message", version = "0.0.15" }
limnus-resource = { path = "../resource", version = "0.0.15" }
limnus-local-resource = { path = "../local-resource", version = "0.0.15" }
# System
limnus-system = { path = "../system", version = "0.0.15" }
