[package]
name = "limnus-system-runner"
version = "0.0.11"
edition = "2021"
repository = "https://github.com/swamp/limnus"
license = "MIT"
categories = ["game-development"]
description = "Runs limnus systems"


[dependencies]
limnus-system = {path = "../system", version = "0.0.11" }
limnus-system-state = {path = "../system-state", version = "0.0.11" }
